# jubilant-octo-invention

./: CMakeLists.txt  LICENSE
res/animations/: WalkingAnimation.h  WalkingAnimation.txt
res/fonts/: UbuntuMono-R.h
src/: AnimationSystem.cpp  AnimationSystem.hpp  Component.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  InputSystem.cpp  InputSystem.hpp  LogicSystem.cpp  LogicSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Player.cpp  Player.hpp  Process.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
tools/: AnimationEditor.html
